--- a/OdeToFood.Web/Pages/Restaurants/List.cshtml
+++ b/OdeToFood.Web/Pages/Restaurants/List.cshtml
@@ -6,8 +6,8 @@
 <form metho="get">
     <div class="form-group">
         <div class="input-group">
-            <input type="search" class="form-control" />
-            <button class="btn btn-default"><i class="fas fa-search"></i></button>
+            <input type="search" class="form-control" asp-for="SearchTerm" />
+            <button class="btn btn-primary"><i class="fas fa-search"></i></button>
         </div>
     </div>
 </form>
