--- a/OdeToFood.Web/Pages/Restaurants/List.cshtml
+++ b/OdeToFood.Web/Pages/Restaurants/List.cshtml
@@ -1,6 +1,10 @@
 @page
 @model ListModel
 
+@{
+    ViewData["Title"] = "Restaurant Lists";
+}
+
 <h1>Restaurant</h1>
 
 <form metho="get">
@@ -19,6 +23,15 @@
             <td>@restaurant.Name</td>
             <td>@restaurant.Location</td>
             <td>@restaurant.Cuisine</td>
+            <td>
+                <a 
+                    class="btn btn-lg" 
+                    href="/Restaurants/Detail?restaurantId=@restaurant.Id"
+                    @* asp-page="/Detail" asp-route-restaurantId="@restaurant.Id" *@
+                >
+                    <i class="fas fa-search-plus"></i>
+                </a>
+            </td>
         </tr>
     }
 </table>
