--- a/OdeToFood.Web/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood.Web/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - OdeToFood.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://kit.fontawesome.com/4e274e72e0.js"></script>
 </head>
 <body>
     <header>
